--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.7.0_79"/>
+	<classpathentry kind="lib" path="libs/TinkingInJava.jar"/>
+	<classpathentry kind="lib" path="libs/typeinfo-pets.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
